# ai_financial_intelligence

./: .gitignore  AGENTS.md  README.md  factory.toml  pyproject.toml
.factory/logs/: 20260402-233716-bootstrap.prompt.md  20260402-233743-bootstrap.prompt.md  20260403-005346-bootstrap.prompt.md  20260403-005556-bootstrap.prompt.md  20260403-010133-bootstrap.prompt.md  20260403-010346-bootstrap.prompt.md  20260403-173525-bootstrap.prompt.md  20260403-175037-deliver.prompt.md  20260403-175600-optimize.prompt.md  20260403-224139-deliver.prompt.md  20260403-225047-optimize.prompt.md  github-config-smoke.txt  model-config-smoke.txt
.github/workflows/: bootstrap-mvp.yml  ci.yml  delivery-loop-self-hosted.yml  delivery-loop.yml  optimize-loop-self-hosted.yml  optimize-loop.yml
ai_financial_intelligence/: __init__.py  analysis.py  clients.py  indicators.py  main.py  settings.py  storage.py
ai_financial_intelligence/fixtures/: events_snapshot.json  macro_snapshot.json  market_snapshot.json
docs/: acceptance.md  decision-log.md  github-automation.md  idea.md  metrics.md  prd.md  self-hosted-runner.md  tasks.md  test-plan.md
factory/: __init__.py  cli.py  codex.py  config.py  state.py
fastapi/: __init__.py  responses.py
httpx/: __init__.py
prompts/: autofix.md  bootstrap.md  deliver.md  optimize.md
tests/: test_analysis.py  test_app.py  test_clients.py  test_codex.py  test_config.py
