[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-financial-intelligence-platform"
version = "0.1.0"
description = "Bootstrap MVP for a fixture-first AI financial intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "uvicorn>=0.34,<1",
]

[tool.setuptools.packages.find]
include = ["factory*", "ai_financial_intelligence*"]
